Add rate limit, security, req & db timeout
